--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Articles</h1>
-
+<%= paginate @articles%>
 <table>
     <% @articles.each do |article| %>
       <tr>
