--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,9 @@
 <%= form_with(model: article, local: true) do |form| %>
+  <% if !signed_in?  %>
+     <script type="text/javascript">
+      window.location.href="/users/sign_up"
+    </script>
+  <% end%>
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
