--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -17,9 +17,14 @@
         </thead>
         <tbody>
           <td><%= article.text %></td>
+
           <td><%= link_to 'Show', article %></td>
-          <td><%= link_to 'Edit', edit_article_path(article) %></td>
-          <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if signed_in?  %>
+          <td><%= if article.createdBy == current_user.email  
+              link_to 'Edit ', edit_article_path(article) end %></td>
+          <td><%= if article.createdBy == current_user.email  
+            link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } end %></td>
+          <% end %>
         </tbody>
       </tr>
     <% end %>
