--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -30,6 +30,11 @@
     <%= form.label :categories %>
     <%= form.text_field :categories, id: :article_categories %>
   </div>
+  
+  <div class="field">
+    <%= form.label :image %><br>
+    <%= form.file_field :image %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
