--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -22,7 +22,9 @@
   <%= @article.createdBy %>
   
 </p>
-<%= if @article.createdBy == current_user.email  
-	 link_to 'Edit |', edit_article_path(@article) 
- 	end %> 
+<% if signed_in?  %>
+	<%= if @article.createdBy == current_user.email  
+	 	link_to 'Edit |', edit_article_path(@article) 
+ 		end %> 
+ <% end %> 
 <%= link_to 'Back', articles_path %>
