--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,35 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Rublog</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="dropdown">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorie
+          <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <% @cats.each do |cat| %>
+          <li><a href="/articles?categories[]=<%=cat.categories%>"><%=cat.categories%></a></li>
+            <%end%>
+        </ul>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
+  </div>
+</nav>
+
 <p id="notice"><%= notice %></p>
 
 <h1>Articles</h1>
@@ -8,6 +40,10 @@
         <thead>
           <tr>
             <th><%= article.title %></th>
+            <span class="glyphicon glyphicon-thumbs-up glyphicon-align-center" aria-hidden="true"></span>
+            <span class ="badge"><%= article.get_upvotes.size %> </span>
+            <span class="glyphicon glyphicon-thumbs-down glyphicon-align-center" aria-hidden=""true></span>
+            <span class ="badge"><%= article.get_downvotes.size %> </span>
             <th colspan="3"></th>
           </tr>
            <tr>
@@ -16,6 +52,8 @@
           </tr>
         </thead>
         <tbody>
+
+
           <td><%= article.text %></td>
           <td><% if article.image? %>
               <%= image_tag article.image.thumb.url %>
@@ -26,8 +64,10 @@
               link_to 'Edit ', edit_article_path(article) end %></td>
           <td><%= if article.createdBy == current_user.email  
             link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } end %></td>
+
           <% end %>
         </tbody>
+
       </tr>
 
     <% end %>
