--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,9 +10,12 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">Rublog</a>
+      <a class="navbar-brand" href="articles">Rublog</a>
     </div>
+
     <ul class="nav navbar-nav">
+
+      <li><a href="best">Best</a></li>
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Categorie
           <span class="caret"></span></a>
