add register css

--- a/public/login/css/main.css
+++ b/public/login/css/main.css
@@ -319,6 +319,7 @@ iframe {
   background: transparent;
   height: 60px;
   padding: 0 20px;
+  background-color: rgb(242,242,242);
 }
 /*------------------------------------------------------------------
 [ Focus Input ]*/
