--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,49 @@
-<h2>Sign up</h2>
+ <div class="limiter">
+    <div class="container-login100" >
+      <div class="wrap-login100 p-l-110 p-r-110 p-t-62 p-b-33">
+        <h2>Créer un compte </h2><br/><br/>
+        
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+            <div class="field">
+              <div class="p-t-31 p-b-9">
+              <span class="txt1">
+                Votre adresse email : 
+              </span><br>
+            </div>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email" , class: 'input100'%>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+            <div class="field">
+              <div class="p-t-31 p-b-9">
+                <span class="txt1">
+                  Mot de passe : 
+                </span><br>
+              </div>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "off", class: 'input100' %>
+            </div>
+
+            <div class="field">
+              <span class="txt1">
+                Confirmation mot de passe : 
+              </span><br>
+              <%= f.password_field :password_confirmation, autocomplete: "off" , class: 'input100'%>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "S'enregistrer" , class: 'login100-form-btn'%>
+            </div>
+          <% end %>
+
+        <%= render "devise/shared/links" %>
+      
+      </div>
+    </div>
   </div>
+  
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <div id="dropDownSelect1"></div>
